Merged revisions 11206-11210 via svnmerge from https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/branches/1.6-testing
........
  r11206 | dhustace | 2008-11-09 12:15:55 -0500 (Sun, 09 Nov 2008) | 1 line
  
  Fix for rescanning localhost with only 127.0.0.1 interface; bug: 2871
........
  r11207 | dhustace | 2008-11-10 11:32:24 -0500 (Mon, 10 Nov 2008) | 1 line
  
  corrected default opennms home path
........
  r11208 | tarus | 2008-11-10 12:15:03 -0500 (Mon, 10 Nov 2008) | 4 lines
  
  This change adds an optional attribute called "notify" to the event configuration.
  By default it is set to true and should not affect anything else within OpenNMS.
  If set to false it will cause notices to be ignored for this event. Bug 2891.
........
  r11209 | rangerrick | 2008-11-10 12:43:19 -0500 (Mon, 10 Nov 2008) | 1 line
  
  bug #2889, prepend RESOLVED: on -nm for messages, since they are used for SMS; old behavior is available by setting numeric-skip-resolved-prefix="true" in the <notifd-configuration> tag.  Also, clean up a few things that can be final-ized.
........
  r11210 | rangerrick | 2008-11-10 12:52:55 -0500 (Mon, 10 Nov 2008) | 1 line
  
  various cleanups recommended by findbugs
........