@@ -117,7 +117,7 @@ abstract public class SnmpMonitorStrategy extends IPv4Monitor {
      * @param value
      * @return
      */
-    private Boolean checkStringCriteria(String operator, String operand, String value) {
+    private Boolean checkStringCriteria(final String operator, String operand, String value) {
         Boolean retVal = null;
         
         if (value == null) {
@@ -133,11 +133,11 @@ abstract public class SnmpMonitorStrategy extends IPv4Monitor {
         }
         
         if (EQUALS.equals(operator))
-            retVal = new Boolean(operand.equals(value));
+            retVal = Boolean.valueOf(operand.equals(value));
         else if (NOT_EQUAL.equals(operator))
-            retVal = new Boolean(!operand.equals(value));
+            retVal = Boolean.valueOf(!operand.equals(value));
         else if (MATCHES.equals(operator))
-            retVal = new Boolean(Pattern.compile(operand).matcher(value).find());
+            retVal = Boolean.valueOf(Pattern.compile(operand).matcher(value).find());
         return retVal;
     }
 
